[tool.poetry]
name = "getpostcode1"
version = "0.1.0"
description = ""
authors = ["pon271828 <g.pon.san.4132g@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
